--- a/mixxx/res/html/playlists.html
+++ b/mixxx/res/html/playlists.html
@@ -1,2 +1,6 @@
 <h2>Playlists</h2>
-<p>Something something....</p> 
+<p>Playlists are ordered lists of songs that allow you to plan your DJ sets.</p> 
+<p>Some DJs construct playlists before they perform live, but others prefer to build them on-the-fly. 
+   When using a playlist during a live DJ set, remember to always pay close attention to how your audience
+    reacts to the music you've chosen to play. It may be necessary to skip some songs in your prepared
+    playlist or add some different songs in order to maintain the energy of your audience.</p>
